@@ -13,27 +13,23 @@ import ca.uhn.fhir.rest.api.server.SystemRequestDetails;
 import ca.uhn.fhir.rest.server.SimpleBundleProvider;
 import ca.uhn.fhir.rest.server.util.ISearchParamRegistry;
 import ca.uhn.fhir.subscription.SubscriptionConstants;
+import ca.uhn.test.util.LogbackCaptureTestExtension;
 import ch.qos.logback.classic.Level;
-import ch.qos.logback.classic.Logger;
-import ch.qos.logback.classic.spi.ILoggingEvent;
-import ch.qos.logback.core.Appender;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r4.model.Subscription;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.List;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasItem;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -43,13 +39,11 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 public class SubscriptionLoaderTest {
 
-	private Logger ourLogger;
-
 	@Spy
 	private FhirContext myFhirContext = FhirContext.forR4Cached();
 
-	@Mock
-	private Appender<ILoggingEvent> myAppender;
+	@RegisterExtension
+	LogbackCaptureTestExtension myLogCapture = new LogbackCaptureTestExtension(SubscriptionLoader.class);
 
 	@Mock
 	private SubscriptionRegistry mySubscriptionRegistry;
@@ -81,15 +75,8 @@ public class SubscriptionLoaderTest {
 	@InjectMocks
 	private SubscriptionLoader mySubscriptionLoader;
 
-	private Level myStoredLogLevel;
-
 	@BeforeEach
 	public void init() {
-		ourLogger = (Logger) LoggerFactory.getLogger(SubscriptionLoader.class);
-
-		myStoredLogLevel = ourLogger.getLevel();
-		ourLogger.addAppender(myAppender);
-
 		when(myResourceChangeListenerRegistry.registerResourceResourceChangeListener(
 			anyString(),
 			any(SearchParameterMap.class),
@@ -100,12 +87,6 @@ public class SubscriptionLoaderTest {
 		when(myDaoRegistry.getResourceDaoOrNull("Subscription")).thenReturn(mySubscriptionDao);
 
 		mySubscriptionLoader.registerListener();
-	}
-
-	@AfterEach
-	public void end() {
-		ourLogger.detachAppender(myAppender);
-		ourLogger.setLevel(myStoredLogLevel);
 	}
 
 	private IBundleProvider getSubscriptionList(List<IBaseResource> theReturnedResource) {
@@ -122,42 +103,33 @@ public class SubscriptionLoaderTest {
 		subscription.setId("Subscription/123");
 		subscription.setError("THIS IS AN ERROR");
 
-		ourLogger.setLevel(Level.ERROR);
-
 		// when
 		when(myDaoRegistry.getResourceDao("Subscription"))
-				.thenReturn(mySubscriptionDao);
+			.thenReturn(mySubscriptionDao);
 		when(myDaoRegistry.isResourceTypeSupported("Subscription"))
 				.thenReturn(true);
-		when(mySubscriptionDao.search(any(SearchParameterMap.class), any(SystemRequestDetails.class)))
-			.thenReturn(getSubscriptionList(
-				Collections.singletonList(subscription)
-			));
+		when(mySubscriptionDao.searchForResources(any(SearchParameterMap.class), any(SystemRequestDetails.class)))
+			.thenReturn(List.of(subscription));
 
 		when(mySubscriptionActivatingInterceptor.activateSubscriptionIfRequired(any(IBaseResource.class)))
-				.thenReturn(false);
+			.thenReturn(false);
 
 		when(mySubscriptionActivatingInterceptor.isChannelTypeSupported(any(IBaseResource.class)))
 			.thenReturn(true);
 
 		when(mySubscriptionCanonicalizer.getSubscriptionStatus(any())).thenReturn(SubscriptionConstants.REQUESTED_STATUS);
-		
+
 		// test
 		mySubscriptionLoader.syncDatabaseToCache();
 
 		// verify
 		verify(mySubscriptionDao)
-			.search(any(SearchParameterMap.class), any(SystemRequestDetails.class));
+			.searchForResources(any(SearchParameterMap.class), any(SystemRequestDetails.class));
 
-		ArgumentCaptor<ILoggingEvent> eventCaptor = ArgumentCaptor.forClass(ILoggingEvent.class);
-		verify(myAppender).doAppend(eventCaptor.capture());
-		String actual = "Subscription "
+		String expected = "Subscription "
 			+ subscription.getIdElement().getIdPart()
 			+ " could not be activated.";
-		String msg = eventCaptor.getValue().getMessage();
-		Assertions.assertTrue(msg
-			.contains(actual),
-			String.format("Expected %s, actual %s", msg, actual));
-		Assertions.assertTrue(msg.contains(subscription.getError()));
+		assertThat(myLogCapture.getLogEvents(), hasItem(LogbackCaptureTestExtension.eventWithLevelAndMessageContains(Level.ERROR, expected)));
+		assertThat(myLogCapture.getLogEvents(), hasItem(LogbackCaptureTestExtension.eventWithMessageContains(subscription.getError())));
 	}
 }
